# chromaFlow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.txt
.github/: copilot-instructions.md
chromaLib/: ChromaBaseClasses.h  ChromaFFT.h  ChromaFeatureExtractor.h  ChromaLayers.h  ChromaLossFunctions.h  ChromaOptimizers.h
tests/: CMakeLists.txt  test_chroma_base_classes.cpp  test_chroma_utils.cpp  test_energy_loss.cpp  test_feature_extractor_outputs.cpp  test_layers_outputs.cpp  test_loss_functions.cpp
